intel/bench_214/extr_.kphp-kdbvkextcrc32.c_crc32_partial_with_main/log.txt
bench_214/extr_.kphp-kdbvkextcrc32.c_crc32_partial_with_main/extr_.kphp-kdbvkextcrc32.c_crc32_partial_with_main.c:6:13: error: redeclaration of C++ built-in type 'bool'
typedef int bool;
            ^
1 error generated.
HLS FPGA Parse FAILED.
